@@ -7,7 +7,10 @@ const MailPageBuilder = require('~/data/Builders/MailPageBuilder');
 const options = {
     names: ['mail'],
     expectedParameters: [],
-    MAX_ENTIRES: 25,
+    pagination: {
+        emojis: ['⬅️', '➡️'],
+        MAX_ENTRIES: 25
+    }
 }
 
 class MailCommand extends Command {
@@ -17,27 +20,18 @@ class MailCommand extends Command {
     async validate() {
         super.validate();
         this.mail = await MailCommands.getMailTitles(this.msg.userId, 1);
-        this.mailCount = this.mail.length ? this.mail[0].count : 0;
+        this.entryCount = this.mail.length ? this.mail[0].count : 0;
     }
     async run() {
         const embed = MailPageBuilder.build(this.mail, 1);
 
         if(this.mail.length) {
-            const saved = { page: 1, maxPage: Math.ceil(this.mailCount/options.MAX_ENTIRES) }
             await UserCommands.update(this.msg.userId, [
                 { rowName: 'nextCommand', value: 'mail/OpenMail' },
-                { rowName: 'saved', value: JSON.stringify(saved) }
             ]);
         }
 
         return EmbedBuilder.build(this.msg, embed);
-    }
-    async afterSend(lastMessageId) {
-        if(this.mailCount > options.MAX_ENTIRES) {
-            const message = await this.msg.channel.messages.fetch(lastMessageId);
-            message.react('⬅️');
-            message.react('➡️');
-        }
     }
 }
 
