@@ -4,3 +4,10 @@ February 6 2021
 - Added page support for mail command
 - Fixed battles not working if Pokemon had a half level
 - Added shadow flag to List command
+
+February 7 2021
+- Added support for pagination to commands
+- Added page support for news command
+- Added createNews command
+- Fixed issue where you could switch to a Pokemon already out in battles
+- Fixed quit command issue where you couldn't quit while switching Pokemon
